--- a/index.html
+++ b/index.html
@@ -51,13 +51,8 @@
 			</tr>
 		</table>
 
-		<script type="application/javascript" src="Neighbourhoodlibs/js/jquery-2.2.3.min.js"></script>
-		<script type="application/javascript" src="Neighbourhoodlibs/js/neighbourhoodscript.js"></script>
-		<script type="application/javascript" src="getCountryCodelibs/js/jquery-2.2.3.min.js"></script>
-		<script type="application/javascript" src="getCountryCodelibs/js/getCountryCodeScript.js"></script>
-		<script type="application/javascript" src="Oceanlibs/js/jquery-2.2.3.min.js"></script>
-		<script type="application/javascript" src="Oceanlibs/js/OceanScript.js"></script>
-
+		<script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
+		<script type="application/javascript" src="libs/js/script.js"></script>
 
 	</body>
 
