--- a/kerrie/index.html
+++ b/kerrie/index.html
@@ -14,17 +14,10 @@
 
 	<body>
 
-		<label>Select Latitude</label><select id="selectLatitude">
-			<option value="1">50.01</option>
-			<option value="2">51.01</option>
-			<option value="3">52.01</option>
-		</select>
+		<label>Select Latitude</label>
+			<input type="number" id="selectLatitude"></input>
 
-		<label>Select Longitude</label><select id="selectLongitude">
-			<option value="a">10.2</option>
-			<option value="b">11.2</option>
-			<option value="c">12.2</option>
-		</select>
+		<label>Select Longitude</label><input type="number" id="selectLongitude"></input>
 
 		<button id="srtm1BtnRun">Get SRTM1</button>
 		<button id="srtm3BtnRun">Get SRTM3</button>
@@ -78,7 +71,7 @@
 					<td align="right">
 						GTOPO30: 
 					</td>
-					<td id="GTOPO30">
+					<td id="GTOPO3O">
 						
 					</td>
 
