--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -1,49 +1,52 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!--Meta data-->
+  <!-- Meta data -->
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Jquery Script -->
+  <script type="text/javascript" src="assets/js/jquery.js"></script>
+
 	<title>Gazetteer</title>
 	<meta name="description" content="Gazetteer API">
 	<meta name="author" content="Kerrie Mcivor">
-  <!--Stylesheets-->
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <!--Leaflet styling & script-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-  integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-  crossorigin=""/>
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" 
-  integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-  crossorigin=""></script>
+
+  <!-- Leaflet styling & script -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 
 </head>
 
 <body>
-  <!--Navbar-->
+  <!-- Navbar -->
   <nav class="navbar navbar-default">
     <div class="container-fluid justify-content-center">
       <div class="navbar-header">
-        <a class="navbar-brand">Gazetteer</a>
+        <a class="navbar-brand" href="#">Gazetteer</a>
       </div>
-      <!--Dropdown list-->
+
+      <!-- Dropdown list -->
       <div class="dropdown py-4">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="dropdown">Country
         <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li>Example</li>
-        </ul>
+        <select class="dropdown-menu">
+          <option>Country 1</option>
+          <option>Country 2</option>
+          <option>Country 3</option>
+          <!-- Add more options here -->
+        </select>
       </div>
     </div>
   </nav>
 
-  <div id="map" class="w-100 h-100"></div>
-
-  <!--Scripts-->
-	<script src='assets/js/bootstrap.min.js'></script>
-  <script src='assets/js/jquery-2.2.3.min.js'></script>
-  <script src='assets/js/script.js'></script> 
+  <!-- Javascript scripts -->
+	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="assets/js/script.js" type="text/javascript"></script> 
 
 </body>
 </html>
