--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -31,13 +31,8 @@
     </div>
       <!-- Dropdown list -->
       <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle pl-1" type="button" data-toggle="dropdown" id="dropdown">Country
-        <span class="caret"></span></button>
-        <select class="dropdown-menu">
-          <option>Country 1</option>
-          <option>Country 2</option>
-          <option>Country 3</option>
-          <!-- Add more options here -->
+        <select class="countryList" id="countryList">
+          <option>Select a country:</option>
         </select>
       </div>
   </nav>
@@ -52,10 +47,12 @@
     attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 }).addTo(map);</script>
   </div>
-    <!-- preloader div -->
+
+    <!-- preloader div 
     <div class="d-flex justify-content-center text-primary" id="loader">
       <div class="spinner-border" role="status"></div>
-    </div>
+    </div> -->
+
   <!-- Javascript scripts -->
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="assets/js/script.js" type="text/javascript"></script> 
