--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -38,15 +38,8 @@
   </nav>
   </div>
 
-  <!-- country map from leaflet -->
- 
-  <div class ="row" id="map">
-      <script>const map = L.map('map').fitWorld();
-      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    maxZoom: 19,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-}).addTo(map);</script>
-  </div>
+  <!-- map div -->
+  <div class ="row" id="map"></div>
 
     <!-- preloader div 
     <div class="d-flex justify-content-center text-primary" id="loader">
