--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -36,11 +36,6 @@
     </nav>
   </div>
 
-  <!-- preloader div 
-    <div class="d-flex justify-content-center text-primary" id="loader">
-      <div class="spinner-border" role="status"></div>
-    </div> -->
-
   <!-- map div -->
   <div class ="row" id="map">
     <div class="btn-group-vertical position-absolute">
@@ -71,7 +66,7 @@
               <h5 class="modal-title" id="timeModalLabel">Time</h5>
             </div>
             <div class="modal-body">
-              The time currently in the capital of {country} is <span class="currentTime">xxx</span>
+              The time currently in the capital of {country} is <span id="currentTime">xxx</span>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal" id="timeCloseModal">Close</button>
@@ -149,7 +144,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
