--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/stylesheet.css">
 
   <!-- Leaflet styling & script -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
@@ -23,39 +23,31 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
   <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
   <script src="https://kit.fontawesome.com/f3dc4a3aae.js" crossorigin="anonymous"></script>
-</head>
-
+  
 <body>
-  <!-- Navbar -->
-  <div class="container-fluid bg-light">
-    <nav class="navbar justify-content-center">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Gazetteer</a>
+<div class="container-fluid bg-light">
+  <!-- map div -->
+  <div class="row" id="map">
+    <div class="col-sm-6">
+      <div class="modal" id="myModal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body"></div>
+          </div>
+        </div>
       </div>
-      <!-- Dropdown list -->
-      <div class="dropdown">
+    </div>
+    <div style="position: absolute; top: 0; right: 0; z-index: 1000; display: flex; align-items: center;">
+      <div style="margin-left: auto;">
         <select class="countryList" id="countryList">
           <option>Select a country:</option>
         </select>
       </div>
-    </nav>
-  </div>
-
-  <!-- map div -->
-  <div class ="row" id="map">
-    <div class="modal" id="myModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-body"></div>
-        </div>
-      </div>
     </div>
   </div>
-
-      
-  <!-- Javascript scripts -->
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="assets/js/script.js" type="text/javascript"></script> 
-
+</div>
+<!-- Javascript scripts -->
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/script.js" type="text/javascript"></script> 
 </body>
 </html>
