fixed zoom issues

--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -22,7 +22,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
   <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
   <script src="https://kit.fontawesome.com/f3dc4a3aae.js" crossorigin="anonymous"></script>
-  <script src="./assets/js/extra-markers.min.js"></script>
+  <script src="./assets/leaflet/extra-markers.min.js"></script>
+  <link rel="stylesheet" href="./assets/leaflet/extra-markers.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 
