fixed markers & modal styling

--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -51,7 +51,7 @@
               </div>
               <div class="currency-modal-body">
               <select id="currencyList"></select>
-              Amount: <input type="number" id="amountInput" step="0.01" required>
+             <input type="number" id="amountInput" step="0.01" required>
               <button id="convertButton">Convert</button>
               <div id="conversionResult"></div>
             </div>
