--- a/gazetter/home.html
+++ b/gazetter/home.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Jquery Script -->
-  <script type="text/javascript" src="assets/js/jquery.js"></script>
 
   <!-- Meta data -->
 	<meta charset="utf-8">
@@ -11,63 +9,241 @@
 	<meta name="description" content="Gazetteer API">
 	<meta name="author" content="Kerrie Mcivor">
 
+  <script type="text/javascript" src="assets/js/jquery.js"></script>
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/stylesheet.css">
-
-  <!-- Leaflet styling & script -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
-     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
-  <!-- Leaflet easybutton & extra markers styling & script -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
-  <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
-  <script src="https://kit.fontawesome.com/f3dc4a3aae.js" crossorigin="anonymous"></script>
-  <script src=./assets/leaflet/extra-markers.min.js></script>
+  <link rel="stylesheet" href="./assets/css/leaflet.css">
+  <link rel="stylesheet" href="./assets/css/easybutton.css">
+  <link rel="stylesheet" href="./assets/css/all.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <link rel="stylesheet" href="./assets/leaflet/extra-markers.min.css">
+  <link rel="stylesheet" href="./assets/leaflet/markerCluster/dist/MarkerCluster.css">
+  <link rel="stylesheet" href="./assets/leaflet/markerCluster/dist/MarkerCluster.Default.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="stylesheet" href="assets/css/stylesheet.css">
+</head>
+
 <body onload="onLoad()">
-  <div class="container-fluid bg-light">
+  <div class="pl-1">
     <!-- map div -->
-    <div class="row" id="map">
+    <div class="row w-100" id="map">
+      <div class="dropdown">
+        <select class="form-control-lg countryList mt-2" id="countryList"></select>
+      </div>
       <div class="col-sm-6">
-        <div class="modal" id="myModal">
-          <div class="modal-dialog">
+        <!--info modal-->
+        <div class="modal" id="info">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title"></h5>
+              <div class="modal-header bg-warning bg-gradient text-white">
+                <h5 class="modal-title">Country Info</h5>
               </div>
-              <div class="modal-body"></div>
+              <div class="modal-body">
+                <div class="row p-1 m-1">
+                  <div class="col-md-6">
+                    <img src="..." id="flag" class="w-100">
+                  </div>
+                  <div class="col-md-6 d-flex justify-content">
+                    <p id="infotext" class="m-auto"></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>      
+        <!--currency modal-->
+        <div class="modal" id="currency">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header bg-warning bg-gradient text-white">
+                <h5 class="modal-title">Conversion Rate</h5>
+              </div>
+              <div class="modal-body">
+                <div class="form-body">
+                  <div class="row align-items-center pb-2">
+                    <div class="col-md-4">
+                      <label for="currencyList">Currency:</label>
+                      <select class="form-control" id="currencyList"></select>
+                    </div>
+                    <div class="col-md-5">
+                      <label for="amountInput">Amount:</label>
+                      <input type="number" class="form-control" id="amountInput" step="0.01" placeholder="100" required>
+                    </div>
+                    <div class="col-md-3 pt-3">
+                      <button class="btn btn-warning" id="convertButton" type="submit">Convert</button>
+                    </div>
+                  </div>
+                  <div class="row pt-2">
+                    <div class="d-flex justify-content-center" id="conversionResult">
+                    <p class="font-weight-bold p-3 mb-2 text-dark" id="result"></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="currencyModal" id="currencyModal">
-          <div class="currency-modal-dialog">
-            <div class="currency-modal-content">
-              <div class="currency-modal-header">
-                <h5 class="currency-modal-title">Conversion Rate</h5>
+      <!--wiki modal-->
+      <div class="modal" id="wiki">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header bg-warning bg-gradient text-white">
+              <h5 class="modal-title">Wikipedia</h5>
+            </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-6">
+                  <img class="modal-image img-fluid" id="wikiImage" src="https://pngimg.com/d/wikipedia_PNG18.png" alt="Wikipedia Image">
+                </div>
+                <div class="col-md-6">
+                  <p id="wikiText"></p>
+                  <a id="wikiUrl" href="#" target="_blank">Continue reading</a>
+                </div>
               </div>
-              <div class="currency-modal-body">
-              <select id="currencyList"></select>
-             <input type="number" id="amountInput" step="0.01" required>
-              <button id="convertButton">Convert</button>
-              <div id="conversionResult"></div>
+            </div>
+          </div>
+        </div>
+      </div>      
+      <!--weather modal-->
+      <div class="modal" id="weather">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header bg-warning bg-gradient text-white">
+              <h5 class="modal-title">Weather</h5>
+            </div>
+            <div class="modal-body"></div>
+            <div class="row justify-content-center">
+              <div class="col-9 border border-dark">
+                <div class="row">
+                <h5 id="today" class="pt-1"></h5>
+                </div>
+                <div class="row">
+                  <div class="col d-flex align-items-center">
+                    <p id="todayTemp"></p>
+                  </div>
+                  <div class="col d-flex align-items-center justify-content-center">
+                    <img src="" id="todayImg" class="w-75">
+                  </div>
+                  <div class="col d-flex align-items-center justify-content-end">
+                    <p id="todayCondition"></p>
+                  </div>
+                </div>                
+              </div> 
+            </div>
+            <div class="row justify-content-center mb-2 pb-3">
+              <div class="col-3 border border-dark">
+                <div class="row pt-2 justify-content-center text-center">
+                  <p id="date1"></p>
+                </div>
+                <div class="row justify-content-center">
+                  <img src="" id="img1" class="w-75 mb-3">
+                </div>
+                <div class="row justify-content-center text-center">
+                  <p id="temp1"></p>
+                </div>
+              </div>
+              <div class="col-3 border border-dark">
+                <div class="row pt-2 justify-content-center text-center">
+                  <p id="date2"></p>
+                </div>
+                <div class="row justify-content-center">
+                  <img src="" id="img2" class="w-75 mb-3">
+                </div>
+                <div class="row justify-content-center text-center">
+                  <p id="temp2"></p>
+                </div>
+              </div>
+              <div class="col-3 border border-dark">
+                <div class="row pt-2 justify-content-center text-center">
+                  <p id="date3"></p>
+                </div>
+                <div class="row justify-content-center">
+                  <img src="" id="img3" class="w-75 mb-3">
+                </div>
+                <div class="row justify-content-center text-center">
+                  <p id="temp3"></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div style="position: absolute; top: 0; left: 0; right: 0; margin: auto; z-index: 1000; text-align: center; width: 100%;">
-        <select class="form-control-lg countryList" id="countryList">
-          <option>Select a country:</option>
-        </select>
+      <!--football modal-->
+      <div class="modal" id="football">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header bg-warning bg-gradient text-white">
+              <h5 class="modal-title">Football</h5>
+            </div>
+            <div class="modal-body"></div>
+            <div class="row pb-1">
+              <img src="" id="footballImage">
+            </div>
+            <div class="row mx-2">
+              <h5 id="team"></h5>
+            </div>
+            <div class="row mx-2">
+              <p id="description"></p>
+              <a href="" id="continue">Continue Reading</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--gallery modal-->
+      <div class="modal" id="gallery">
+          <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+              <div class="modal-header bg-warning bg-gradient text-white">
+              <h5>Photo Gallery</h5>
+            </div>
+            <div class="modal-body">
+              <div id="gallery-carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="..." class="d-block w-100" id="gallery1">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" id="gallery2">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" id="gallery3">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" id="gallery4">
+                </div>
+                <div class="carousel-item">
+                  <img src="..." class="d-block w-100" id="gallery5">
+                </div>
+              </div>
+            </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#gallery-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#gallery-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   
-<!-- Javascript scripts -->
+<!-- Scripts -->
+<script src="./assets/leaflet/leaflet.js" type="text/javascript"></script>
+<script src="./assets/leaflet/extra-markers.min.js" type="text/javascript"></script>
+<script src="./assets/leaflet/markerCluster/dist/leaflet.markercluster.js"></script>
+<script src="./assets/leaflet/easybutton.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="./assets/js/luxon.js"></script>
+<script type="text/javascript" src="./assets/js/numeral.js"></script>
 <script src="assets/js/script.js" type="text/javascript"></script> 
 </body>
 </html>
